--- a/src/assets/scss/_markdown.scss
+++ b/src/assets/scss/_markdown.scss
@@ -2,71 +2,32 @@
 
 .post__wrap {
   padding: 24px 0;
-  // テンプレ
   h1,
   h2,
-  h3,
-  h4,
-  h5,
-  h6 {
+  h3 {
     margin-top: 32px;
-    //color: $sub-txt;
     font-weight: 600;
     line-height: 1.25;
   }
-
   h1 {
     font-size: 3.2rem;
   }
-
   h2 {
     font-size: 2.4rem;
   }
-
   h3 {
     font-size: 1.8rem;
   }
-
-  h4 {
-    font-size: 1.6rem;
-  }
-
-  h5 {
-    font-size: 1.4rem;
-  }
-
-  h6 {
-    font-size: 1.2rem;
-  }
-
   p {
     margin: 24px 0;
-    color: $sub-txt;
+    color: rgba($color: $color-txt, $alpha: 0.9);
     text-align: justify;
-    letter-spacing: 0.1em;
     line-height: 1.5;
-  }
-
-  details {
-    display: block;
-  }
-
-  summary {
-    display: list-item;
-  }
-
-  details summary {
-    cursor: pointer;
   }
 
   a {
     background-color: transparent;
     color: $primary-light;
-    text-decoration: none;
-  }
-
-  a:not([href]) {
-    color: inherit;
     text-decoration: none;
   }
 
@@ -120,23 +81,6 @@
     display: table;
     clear: both;
     content: "";
-  }
-
-  input {
-    overflow: visible;
-    margin: 0;
-    font: inherit;
-    font-size: inherit;
-    font-family: inherit;
-    line-height: inherit;
-  }
-
-  input::-webkit-inner-spin-button,
-  input::-webkit-outer-spin-button {
-    margin: 0;
-
-    -webkit-appearance: none;
-    appearance: none;
   }
 
   [type="checkbox"] {
@@ -204,6 +148,7 @@
   }
 
   li {
+    color: rgba($color: $color-txt, $alpha: 0.9);
     word-wrap: break-all;
   }
 
@@ -213,23 +158,6 @@
 
   li + li {
     margin: 16px 0;
-  }
-
-  dl {
-    padding: 0;
-  }
-
-  dl dt {
-    margin-top: 16px;
-    padding: 0;
-    font-weight: 600;
-    font-style: italic;
-    font-size: 1em;
-  }
-
-  dl dd {
-    margin-bottom: 16px;
-    padding: 0 16px;
   }
 
   table {
@@ -258,6 +186,19 @@
     background-color: #f6f8fa;
   }
 
+  details {
+    display: block;
+  }
+
+  summary {
+    display: list-item;
+  }
+
+  details summary {
+    cursor: pointer;
+  }
+
+  // code
   kbd {
     display: inline-block;
     padding: 3px 5px;
@@ -268,8 +209,21 @@
     box-shadow: inset 0 -1px 0 #c6cbd1;
     color: #444d56;
     vertical-align: middle;
-    font: 11px SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier,
-      monospace;
+    font: 11px SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
     line-height: 10px;
+  }
+  pre {
+    background: rgba($color: $on_background, $alpha: 0.5);
+  }
+  code {
+    font-family: SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+    opacity: 0.8;
+  }
+  .token.property,
+  .token.tag,
+  .token.constant,
+  .token.symbol,
+  .token.deleted {
+    color: $primary;
   }
 }
