--- a/src/assets/scss/_markdown.scss
+++ b/src/assets/scss/_markdown.scss
@@ -209,7 +209,8 @@
     box-shadow: inset 0 -1px 0 #c6cbd1;
     color: #444d56;
     vertical-align: middle;
-    font: 11px SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
+    font: 11px SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier,
+      monospace;
     line-height: 10px;
   }
   pre {
