--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -224,8 +224,12 @@ footer {
     position: absolute;
     top: 0;
     left: 0;
+    overflow: hidden;
     width: 100%;
     height: 100%;
+    color: #ffffff;
+    text-indent: 100%;
+    white-space: nowrap;
     pointer-events: auto;
   }
 }
