[update]フォントファミリーと余白修正
記事ページの余白とフォントファミリー修正

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -44,8 +44,8 @@ body {
   background-color: $color-background;
   color: $color-txt;
   font-size: 1.6rem;
-  font-family: "Rubik", "Noto Sans JP", "游ゴシック Medium", YuGothic, YuGothicM, "Hiragino Kaku Gothic ProN",
-    "Hiragino Kaku Gothic Pro", メイリオ, Meiryo, sans-serif;
+  font-family: "Rubik", 游ゴシック体, "Yu Gothic", YuGothic, "ヒラギノ角ゴシック Pro", "Hiragino Kaku Gothic Pro",
+    メイリオ, Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   line-height: 1.25;
 }
 
