--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -265,7 +265,7 @@ footer {
   }
   &__time {
     display: inline-block;
-    margin: 1em 0 40px;
+    margin: 1em 0 0;
     margin-right: 0.5em;
     color: $color-txt-dark;
 
@@ -281,7 +281,7 @@ footer {
     }
   }
   &__content {
-    padding: 24px 0;
+    padding: 2em 0 0;
     width: 100%;
   }
   .toHome {
