--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -159,12 +159,16 @@
 
   // 引用
   blockquote {
-    margin: 2.3em 0;
+    margin: 2em 0;
     padding: 1em;
+    border-left: 2px solid $color-primary;
     background: $color-background-on;
     font-style: italic;
     p {
       margin: 0.3em 0;
+    }
+    blockquote {
+      margin: 1em 0;
     }
   }
   // code
@@ -178,7 +182,8 @@
     box-shadow: inset 0 -1px 0 #c6cbd1;
     color: #444d56;
     vertical-align: middle;
-    font: 11px SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
+    font: 11px SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier,
+      monospace;
     line-height: 10px;
   }
   pre[class*="language-"] {
