[update]Twitterの真ん中揃え

--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -201,4 +201,8 @@
   .token.deleted {
     color: $color-primary;
   }
+  // twitterカード
+  .twitter-tweet-rendered {
+    margin: 2em auto;
+  }
 }
