--- a/src/assets/scss/_post.scss
+++ b/src/assets/scss/_post.scss
@@ -103,7 +103,7 @@
     font-size: 1.4rem;
     line-height: 1.4;
     th {
-      padding: 10px 12px;
+      padding: 10px 1em;
       text-align: center;
       font-weight: 700;
       &[align="center"] {
@@ -114,27 +114,13 @@
       }
     }
     td {
-      padding: 10px 12px;
+      padding: 10px 1em;
     }
     thead tr {
       background-color: $color-primary-dark;
-      th:first-child {
-        border-radius: 3px 0 0 0;
-      }
-      th:last-child {
-        border-radius: 0 3px 0 0;
-      }
     }
     tbody tr {
       background-color: $color-background-on;
-      &:last-child {
-        td:first-child {
-          border-radius: 0 0 0 3px;
-        }
-        td:last-child {
-          border-radius: 0 0 3px 0;
-        }
-      }
     }
   }
 
@@ -182,8 +168,7 @@
     box-shadow: inset 0 -1px 0 #c6cbd1;
     color: #444d56;
     vertical-align: middle;
-    font: 11px SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier,
-      monospace;
+    font: 11px SFMono-Regular, Consolas, Liberation Mono, Menlo, Courier, monospace;
     line-height: 10px;
   }
   pre[class*="language-"] {
