--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -118,10 +118,9 @@ footer {
   padding: 64px 24px;
   width: 100%;
   border-radius: 3px;
-  // background-color: $color-background-on;
   background: $color-background-on-dark;
   font-weight: 700;
-  &::after {
+  &__title {
     position: absolute;
     top: 0;
     left: 24px;
@@ -129,7 +128,9 @@ footer {
     border: 4px solid $color-background;
     border-radius: 3px;
     background-color: $color-primary-dark;
-    content: "最新記事";
+    content: "";
+    text-transform: capitalize;
+    font-size: 1.6rem;
     transform: translateY(-50%);
   }
   @media #{$mq_sp} {
